# wallet

./: .gitignore  .travis.yml  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  TODO  aclocal.m4  autogen  bootstrap  config.h.in  configure  configure.ac  system.h  wallet_0.10.orig.tar.gz.delta  wallet_0.10.orig.tar.gz.id  wallet_0.11.orig.tar.gz.delta  wallet_0.11.orig.tar.gz.id  wallet_0.12.orig.tar.gz.delta  wallet_0.12.orig.tar.gz.id  wallet_1.0.orig.tar.xz.delta  wallet_1.0.orig.tar.xz.id  wallet_1.1.orig.tar.xz.delta  wallet_1.1.orig.tar.xz.id  wallet_1.2.orig.tar.xz.delta  wallet_1.2.orig.tar.xz.id  wallet_1.3.orig.tar.xz.delta  wallet_1.3.orig.tar.xz.id  wallet_1.4.orig.tar.xz.delta  wallet_1.4.orig.tar.xz.id
.github/workflows/: build.yaml
ci/: install  kdc-setup-heimdal  kdc-setup-mit  test
ci/files/mit/: kadm5.acl
client/: error.c  file.c  internal.h  keytab.c  krb5.c  options.c  remctl.c  srvtab.c  wallet-rekey.1  wallet-rekey.c  wallet-rekey.pod  wallet.1  wallet.c  wallet.pod
config/: allow-extract  keytab  keytab.acl  wallet  wallet-report.acl
contrib/: README  ad-keytab  ad-keytab.8  convert-srvtab-db  used-principals  wallet-contacts  wallet-rekey-periodic  wallet-rekey-periodic.8  wallet-report  wallet-summary  wallet-summary.8  wallet-unknown-hosts  wallet-unknown-hosts.8
contrib/commerzbank/: wallet-history
debian/: changelog  control  copyright  gbp.conf  kasetkey.install  keytab-backend.dirs  keytab-backend.install  rules  wallet-client.install  wallet-server.dirs  wallet-server.docs  wallet-server.examples  wallet-server.install  watch
debian/patches/: 0001-allow-quilt.patch  0002-password-charset.patch  0003-checksum.patch  0004-news.patch  0005-checksum-doc.patch  0006-file-crypt.patch  0007-class-error.patch  0008-invalid-ldap-url.patch  0009-require-perl-gssapi.patch  0010-empty-store.patch  0011-doc.patch  0012-pwd-options.patch  0013-crypt-fixup.patch  0014-crypt-custom.patch  0015-encryption-fixes.patch  0016-checkfile.patch  0016-update-command.patch  0017-checkfile.patch  0018-ad-length.patch  0019-password-encrypt.patch  0020-retire-webauth.patch  0021-spx-test.patch  0022-password-double-encryption.patch  0023-ldap-attr-filter.patch  0024-crypt-suppress-warning.patch  series
doc/: design-acl  design-api  design-schema  netdb-role-api  notes
docs/: design  design-acl  design-api  design-schema  netdb-role-api  notes  objects-and-schemes  objects-and-types  setup  stanford-naming
docs/metadata/: metadata.json  requirements
examples/: stanford.conf
kasetkey/: README  kasetkey.c  kasetkey.pod
m4/: gssapi.m4  kaserver.m4  remctl.m4  snprintf.m4  vamacros.m4
perl/: Build.PL  MANIFEST  MANIFEST.SKIP  Makefile.PL.in  create-ddl
perl/Wallet/: ACL.pm  Admin.pm  Config.pm  Database.pm  Kadmin.pm  Object.pm  Report.pm  Schema.pm  Server.pm
perl/Wallet/ACL/: Base.pm  Krb5.pm  NetDB.pm
perl/Wallet/ACL/Krb5/: Regex.pm
perl/Wallet/ACL/LDAP/: Attribute.pm
perl/Wallet/ACL/NetDB/: Root.pm
perl/Wallet/Kadmin/: Heimdal.pm  MIT.pm
perl/Wallet/Object/: Base.pm  Duo.pm  File.pm  Keytab.pm  WAKeyring.pm
perl/Wallet/Policy/: Stanford.pm
perl/Wallet/Schema/Result/: Acl.pm  AclEntry.pm  AclHistory.pm  AclScheme.pm  Enctype.pm  Flag.pm  (+6 more)
perl/lib/Wallet/: ACL.pm  Admin.pm  Config.pm  Database.pm  Kadmin.pm  Report.pm  Schema.pm  Server.pm
perl/sql/: Wallet-Schema-0.07-0.08-MySQL.sql  Wallet-Schema-0.07-0.08-SQLite.sql  Wallet-Schema-0.07-MySQL.sql  Wallet-Schema-0.07-SQLite.sql  Wallet-Schema-0.08-0.09-MySQL.sql  Wallet-Schema-0.08-0.09-PostgreSQL.sql  Wallet-Schema-0.08-0.09-SQLite.sql  Wallet-Schema-0.08-MySQL.sql  Wallet-Schema-0.08-PostgreSQL.sql  Wallet-Schema-0.08-SQLite.sql  Wallet-Schema-0.09-0.10-MySQL.sql  Wallet-Schema-0.09-0.10-PostgreSQL.sql  Wallet-Schema-0.09-0.10-SQLite.sql  Wallet-Schema-0.09-MySQL.sql  Wallet-Schema-0.09-PostgreSQL.sql  Wallet-Schema-0.09-SQLite.sql  Wallet-Schema-0.10-0.11-MySQL.sql  Wallet-Schema-0.10-0.11-PostgreSQL.sql  Wallet-Schema-0.10-0.11-SQLite.sql  Wallet-Schema-0.10-MySQL.sql  Wallet-Schema-0.10-PostgreSQL.sql  Wallet-Schema-0.10-SQLite.sql  Wallet-Schema-0.11-MySQL.sql  Wallet-Schema-0.11-PostgreSQL.sql  Wallet-Schema-0.11-SQLite.sql  wallet-1.3-update-duo.sql
perl/t/: acl.t  admin.t  config.t  duo.t  file.t  init.t  kadmin.t  keytab.t  object.t  pod-spelling.t  pod.t  report.t  schema.t  server.t  stanford-naming.t  verifier-ldap-attr.t  verifier-netdb.t  verifier.t  wa-keyring.t
perl/t/data/: README  acl-command  keytab-fake  keytab.conf  netdb-fake  netdb.conf
perl/t/docs/: pod.t
perl/t/general/: acl.t  admin.t  config.t  init.t  report.t  server.t
perl/t/lib/: Util.pm
perl/t/object/: base.t  duo-ldap.t  duo-pam.t  duo-radius.t  duo-rdp.t  duo.t  file.t  keytab.t  password.t  wa-keyring.t
perl/t/policy/: stanford.t
perl/t/util/: kadmin.t
perl/t/verifier/: basic.t  external.t  ldap-attr.t  nested.t  netdb.t
portable/: asprintf.c  krb5-extra.c  krb5.h  strlcat.c  strlcpy.c  system.h
server/: kdc-backend  keytab-backend  keytab-backend.8  keytab-backend.in  wallet-admin  wallet-admin.8  wallet-admin.in  wallet-backend  wallet-backend.8  wallet-backend.in  wallet-report  wallet-report.8  wallet-report.in
tests/: TESTS  libtest.c  libtest.h  libtest.sh
tests/client/: basic-t.in  full-t.in  pod-t.in  prompt-t.in  rekey-t.in
tests/config/: README
tests/data/: README  allow-extract  basic.conf  cmd-fake  cmd-wrapper  cmd-wrapper.in  fake-kadmin  fake-keytab  fake-keytab-2  fake-keytab-foreign  fake-keytab-merge  fake-keytab-old  fake-keytab-partial  fake-keytab-partial-result  fake-keytab-rekey  fake-keytab-unknown  fake-srvtab  full.conf  full.conf.in  perl.conf  wallet.conf
tests/docs/: pod-spelling-t  pod-t
tests/kasetkey/: basic-t.in
tests/portable/: asprintf-t.c  snprintf-t.c  strlcat-t.c  strlcpy-t.c
tests/server/: admin-t  admin-t.in  backend-t  backend-t.in  keytab-t  keytab-t.in  pod-t  pod-t.in  report-t
tests/tap/: kerberos.sh  libtap.sh
tests/util/: xmalloc-t  xmalloc-t.in  xmalloc.c
util/: concat.c  util.h
(+42 files in other folders)
